--- a/app/src/main/res/layout/row_item_beacon.xml
+++ b/app/src/main/res/layout/row_item_beacon.xml
@@ -15,34 +15,71 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvLastText"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/layoutPositionTilt"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20sp"
-        android:gravity="start"
-        android:text="@string/beacon_last_read"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvBeaconIdentifier" />
+        app:layout_constraintEnd_toStartOf="@id/ivBeaconStatus"
+        app:layout_constraintTop_toBottomOf="@id/tvBeaconIdentifier"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="4dp">
 
-    <TextView
-        android:id="@+id/tvBeaconLastReading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="start"
-        app:layout_constraintEnd_toStartOf="@+id/tvBeaconLastSeen"
-        app:layout_constraintStart_toEndOf="@+id/tvLastText"
-        app:layout_constraintTop_toBottomOf="@+id/tvBeaconIdentifier" />
+        <TextView
+            android:id="@+id/tvBeaconPosition"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:ems="12"
+            android:textSize="16sp"
+            android:layout_marginEnd="40sp"
+            android:gravity="start|center_vertical" />
 
-    <TextView
-        android:id="@+id/tvBeaconLastSeen"
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/tvBeaconTilt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_degrees"
+            android:ems="4"
+            android:textSize="16sp"
+            android:gravity="start|center_vertical" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutLastReadingRow"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20sp"
-        android:layout_marginBottom="10sp"
-        android:gravity="start"
-        app:layout_constraintEnd_toStartOf="@+id/ivBeaconStatus"
-        app:layout_constraintTop_toBottomOf="@+id/tvBeaconIdentifier" />
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ivBeaconStatus"
+        app:layout_constraintTop_toBottomOf="@id/layoutPositionTilt"
+        android:layout_marginStart="20sp"
+        android:layout_marginTop="4dp">
+
+        <TextView
+            android:id="@+id/tvLastText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:layout_marginEnd="20sp"
+            android:text="@string/beacon_last_read" />
+
+        <TextView
+            android:id="@+id/tvBeaconLastReading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20sp"
+            android:gravity="center" />
+
+        <TextView
+            android:id="@+id/tvBeaconLastSeen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20sp"
+            android:layout_gravity="end"
+            android:gravity="end" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/ivBeaconStatus"
@@ -50,7 +87,7 @@
         android:layout_height="30sp"
         android:layout_marginEnd="10sp"
         android:src="@drawable/check"
-        app:layout_constraintBottom_toBottomOf="@+id/tvLastText"
+        app:layout_constraintBottom_toBottomOf="@+id/layoutLastReadingRow"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,8 +102,9 @@
         android:textColor="@color/warning_orange"
         app:drawableStartCompat="@drawable/warning"
         app:drawableTint="@color/warning_orange"
-        app:layout_constraintEnd_toEndOf="@+id/tvBeaconLastSeen"
-        app:layout_constraintTop_toBottomOf="@+id/tvLastText" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutLastReadingRow" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
