--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -135,7 +135,7 @@
         android:text="@string/permissions_show_in_settings"
         android:layout_marginHorizontal="35sp"
         android:layout_marginTop="40sp"
-        android:backgroundTint="#898787"
+        android:backgroundTint="#5A5A5A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
