--- a/app/src/main/res/menu/slide_drawer.xml
+++ b/app/src/main/res/menu/slide_drawer.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- User info header -->
+    <item
+        android:id="@+id/nav_user_header"
+        android:title=""
+        android:enabled="false" />
+
     <item
         android:id="@+id/nav_settings"
         android:title="@string/settings"
