[ENH] Unsupervised mode: change max session duration timeout to stopping sessions at midnight via a checkbox
Now, this unsupervised mode is opt-in. By default, it is not activated.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -42,11 +42,11 @@
             android:inputType="number"
             android:defaultValue="50" />
 
-        <SeekBarPreference
-            android:key="max_session_duration"
-            android:title="@string/settings_session_max_duration"
-            android:summary="@string/settings_session_max_duration_summary"
-            android:defaultValue="480" />
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="unsupervised_mode"
+            android:summary="@string/settings_unsupervised_mode_summary"
+            android:title="@string/settings_unsupervised_mode" />
 
     </PreferenceCategory>
 
