--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
+        android:icon="@drawable/file_open"
         android:key="manage_sessions"
-        android:title="@string/settings_manage_sessions"
-        android:icon="@drawable/file_open" />
+        android:title="@string/settings_manage_sessions" />
 
     <Preference
         android:key="open_battery_optimization_settings"
         android:title="@string/settings_open_battery_optimization_settings" />
 
     <Preference
-        android:key="privacy_policy"
-        android:title="@string/privacy_policy_title"
+        android:fragment="es.upm.ies.surco.ui.FragPrivacyPolicy"
         android:icon="@drawable/info"
-        android:fragment="es.upm.ies.surco.ui.FragPrivacyPolicy" />
+        android:key="privacy_policy"
+        android:title="@string/privacy_policy_title" />
 
     <PreferenceCategory
         android:icon="@drawable/settings_gear"
@@ -36,11 +35,11 @@
             android:title="@string/settings_color_theme" />
 
         <EditTextPreference
-            android:key="scan_interval"
-            android:title="@string/settings_bluetooth_scan_interval"
-            android:summary="@string/settings_bluetooth_scan_interval_summary"
+            android:defaultValue="50"
             android:inputType="number"
-            android:defaultValue="50" />
+            android:key="scan_interval"
+            android:summary="@string/settings_bluetooth_scan_interval_summary"
+            android:title="@string/settings_bluetooth_scan_interval" />
 
         <SwitchPreferenceCompat
             android:defaultValue="false"
